--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -9,5 +9,37 @@
 <body>
     <h1>Lasagne</h1>
     <img src="lasagne.jpeg" width="50%">
+    <h2>Description</h2>
+    <p>Comfort food doesn't get much more classic than this Italian favourite, featuring layers of rich beef mince and a creamy sauce.</p>
+    <h2>Ingredients</h2>
+    <h3>For the ragu:</h3>
+    <ul>
+        <li>1 onion, diced</li>
+        <li>1 carrot, diced</li>
+        <li>1 celery stalk, diced</li>
+        <li>2 garlic cloves, finely sliced</li>
+        <li>250g beef mince</li>
+        <li>1 tbsp tomato purée</li>
+        <li>400g tin chopped tomatoes</li>
+        <li>200ml beef stock</li>
+        <li>200ml red wine</li>
+        <li>9-12 lasagne sheets</li>
+        <li>50g Parmesan, grated</li>
+        <li>150g pack mozzarella, shredded</li>
+    </ul>
+    <h3>For the white sauce:</h3>
+    <ul>
+        <li>50g butter</li>
+        <li>50g plain flour</li>
+        <li>550ml semi-skimmed milk</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>In a large pan, heat the olive oil over a low heat. Fry the onion, carrot, celery and garlic for 5 mins, or until softened. Add the mince and fry on a medium heat until golden. Turn up the heat, pour in the wine and bubble until reduced. Stir in the tomato purée, chopped tomatoes and stock. Simmer for 15 mins, or until the liquid has reduced. Season.</li>
+        <li>Meanwhile, make the white sauce. Melt the butter in a small saucepan over a low heat and add the flour. Whisk until combined and cook on low for 1-2 mins. Remove from the heat and gradually whisk in the milk until you have a loose sauce. Season. Return to a gentle heat and whisk constantly until the sauce thickens.</li>
+        <li>Preheat the oven to Gas Mark 6/200°/fan 180°C. Layer up the lasagne in a baking dish, starting with a third each of the ragu, then the pasta, then the white sauce. Repeat twice. Top with parmesan and mozzarella, then bake in the oven for 40-45 mins, until piping hot and crisp and bubbling on top. Serve immediately.</li>
+    </ol>
+    <h3>Freezing and defrosting</h3>
+    <p>Once the dish has cooled completely, transfer it to an airtight, freezer-safe container, seal and freeze for up to 1-3 months. To serve, defrost thoroughly in the fridge overnight before reheating. Loosely cover with foil and bake until dish is thoroughly heated through. Reheat until piping hot.</p>
 </body>
 </html>
