--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagne.html">Lasagne</a>
+    <ul>
+        <li><a href="recipes/lasagne.html">Lasagne</a></li>
+        <li><a href="recipes/masala.html">Chicken Tikka Masala</a></li>
+    </ul>
 </body>
 </html>
