--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/lasagne.html">Lasagne</a></li>
         <li><a href="recipes/masala.html">Chicken Tikka Masala</a></li>
+        <li><a href="recipes/burrito.html">Chilli Burrito Bowl</a></li>
     </ul>
 </body>
 </html>
