--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagne.html">Lasagne</a></li>
-        <li><a href="recipes/masala.html">Chicken Tikka Masala</a></li>
-        <li><a href="recipes/burrito.html">Chilli Burrito Bowl</a></li>
+        <li class="recipe-link"><a href="recipes/lasagne.html">Lasagne</a></li>
+        <li class="recipe-link"><a href="recipes/masala.html">Chicken Tikka Masala</a></li>
+        <li class="recipe-link"><a href="recipes/burrito.html">Chilli Burrito Bowl</a></li>
     </ul>
 </body>
 </html>
