Add images to index.html and use CSS to set width

--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li class="recipe-link"><a href="recipes/lasagne.html">Lasagne</a></li>
-        <li class="recipe-link"><a href="recipes/masala.html">Chicken Tikka Masala</a></li>
-        <li class="recipe-link"><a href="recipes/burrito.html">Chilli Burrito Bowl</a></li>
+        <div>
+            <li class="recipe-link"><a href="recipes/lasagne.html">Lasagne</a></li>
+            <img src="recipes/lasagne.jpeg" alt="Freshly cooked lasagne">
+        </div><div>
+            <li class="recipe-link"><a href="recipes/masala.html">Chicken Tikka Masala</a></li>
+            <img src="recipes/masala.jpeg" alt="Freshly cooked chicken tikka masala">
+        </div><div>
+            <li class="recipe-link"><a href="recipes/burrito.html">Chilli Burrito Bowl</a></li>
+            <img src="recipes/burrito.jpeg" alt="Freshly cooked chilli burrito bowl">
+        </div>
     </ul>
 </body>
 </html>
